# project-template

rust/: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile.toml
rust/src/: main.rs
