[package]
name = "my-project"
version = "0.1.0"
edition = "2021"
authors = ["ka2kama"]

[dependencies]
anyhow = { version = "1.0.92", features = ["std", "backtrace"] }
itertools = { version = "0.14.0", features = ["use_alloc"] }
im-rc = { version = "15.1.0", features = ["serde"] }
once_cell = "1.20.2"
derive_more = { version = "1.0.0", features = ["constructor"] }
async-trait = "0.1.83"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = "1.11.0"
validator = { version = "0.19", features = ["derive"] }
chrono = "0.4.39"
regex = "1.11.1"
config = "0.15.4"

tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "ansi", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
